--- a/overlay/OnePlus7SystemUI/res/values/dimens.xml
+++ b/overlay/OnePlus7SystemUI/res/values/dimens.xml
@@ -19,6 +19,10 @@
     <!-- Height of the status bar header bar when on Keyguard -->
     <dimen name="status_bar_header_height_keyguard">@*android:dimen/status_bar_height</dimen>
 
+    <!-- Microns/ums (1000 um = 1mm) per pixel for the given device. If unspecified, UI that
+         relies on this value will not be sized correctly. -->
+    <item name="pixel_pitch" format="float" type="dimen">63.17</item>
+
     <dimen name="rounded_corner_content_padding">18dp</dimen>
 
     <!-- Margin on the right side of the system icon group on Keyguard. -->
